--- a/pages/detail/dzdetail.wxss
+++ b/pages/detail/dzdetail.wxss
@@ -4,31 +4,15 @@
 
 page {
   background-color: white;
+  overflow: hidden;
 }
 
-.mui-content {
-  background-color: white;
+.dz-img{
+  height:53vw;
+  border-radius:5px;
+  width:100%;
 }
 
-.imgview {
-  position: relative;
-  width: 96%;
-  padding-bottom: 90%;
-  text-align: center;
-  left: 2%;
-  top: 1%;
-  align-content: center;
-}
-
-.imgview image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  height: 100%;
-}
 
 .page-section {
   width: 100%;
@@ -67,24 +51,32 @@ page {
 }
 
 swiper {
-  height: 92vw;
-  background-color: rgba(0, 0, 0, 0.8);
+  height: 92vh;
+  background-color: black;
+}
+
+.iconfont{
+  text-align: center;
+  color: rgb(168, 184, 189);
+  font-size: 60rpx;
 }
 
 .bottom-title {
   text-align: left;
   /* text-indent: 60rpx; */
-  padding: 15rpx 20rpx;
   line-height: 38rpx;
-  font-size: 30rpx;
+  font-size: 28rpx;
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -pre-wrap;
   white-space: -o-pre-wrap;
   word-wrap: break-word;
+  color: white;
+  padding: 25rpx;
 }
 
-.button-hover {
-  background-color:transparent;
+.dz-contentview{
+  padding-bottom: 30rpx;
+  color: gray;
+  width: 100%;
 }
-
