--- a/pages/detail/videodetail.wxml
+++ b/pages/detail/videodetail.wxml
@@ -1,76 +1,30 @@
-<!--pages/detail/videodetail.wxml-->
+<!--pages/detail/ztdetail.wxml-->
 <view class="page">
-  <!-- 下层侧栏 模板 -->
-  <import src="../../template/offset.wxml" />
-  <template is="offset" data="{{...offset}}" />
-
-  <!-- 上层主页 -->
-  <view class="page-top">
-    <!-- 遮罩蒙版 -->
-    <view class="mask" hidden='{{!open}}' bindtap='tap_ch' catchtouchmove='stopPageScroll'></view>
-    <!-- 搜索栏 -->
-    <view class="searchBar {{search ? 's-state-1' : 's-state-2'}}">
-      <view class="mui-row searchview">
-        <view class="mui-col-sm-10 mui-col-xs-9">
-          <input class="searchInput mui-ellipsis" bindinput="skeyword" placeholder="请输入搜索关键词" />
-        </view>
-        <view class="mui-col-sm-2 mui-col-xs-3">
-          <view class="searchBtn button" bindtap="search">搜索</view>
-        </view>
-      </view>
-    </view>
-    <!-- 标题栏 -->
-    <view class="titlebar">
-      <text class='titlebar-left iconfont icon-xitongcaidan' bindtap='tap_ch'></text>
-      <text class='titlebar-center'>看视频</text>
-      <text class='titlebar-right iconfont icon-sousuo' bindtap='tap_search'></text>
-    </view>
-    <!-- 正文 -->
-    <scroll-view class="mui-scroll">
-      <view id="list" class="mui-content">
-        <view class="title-text">{{article.articleTitle}}</view>
-        <view class="mui-row undertitle">
-          <view class="mui-col-xs-4 mui-col-sm-4">
-            <navigator url="../../pages/list/gifmain" redirect> 分类:{{article.typeName}}</navigator>
-          </view>
-          <view class="mui-col-xs-4 mui-col-sm-4">
-            阅读:{{article.readTime}}
-          </view>
-          <view class="mui-col-xs-4 mui-col-sm-4">
-            赞:{{article.niceNum}}
-          </view>
-        </view>
-        <view class='videoview'>
+  <!-- 正文 -->
+  <view class="page-section page-section-spacing">
+    <swiper interval="{{interval}}" duration="{{duration}}" previous-margin="{{previousMargin}}px" next-margin="{{nextMargin}}px" bindchange="changePageNum" current='{{current}}'>
+      <block wx:for="{{items}}" wx:key="*this">
+        <swiper-item>
+          <!-- <view class="imgview">
+            <image id="imgBox" mode="aspectFit" data-src="{{item.imgId}}" lazy-load="true" src="{{item.imgId}}" catchtap='openImgView' catchlongpress='saveImg'></image>
+          </view> -->
+          <view class='videoview'>
           <video src='{{firstItem.imgId}}' wx:if="{{!offset.open}}"></video>
           <view class='videoholder' wx:else></view>
-        </view>
-        <!-- 点赞按钮 -->
-        <view id="textBox" class="bottom-title">{{firstItem.text}}</view>
-        <view wx:if="{{!nice}}" class="zanview iconfont icon-xiangqu" bindtap='nice'>赞</view>
-        <view wx:else class="zanedview iconfont icon-xiangqufill" bindtap='nice'>已赞</view>
-
-        <!-- 底部上下页 -->
-        <view id="bottomBox" class="mui-bottom">
-          <view class="mui-row">
-            <view id="lastpage" class="mui-col-sm-6 mui-col-xs-6 lastpage">
-              <form data-type="gotoPage" data-bean="{{lastArticle}}" bindsubmit="formSubmit" report-submit>
-                <button class="form-btn" form-type="submit">
-                  <p style="color: darkgrey;">上一篇:</p>
-                  <p class="mui-ellipsis-2">{{lastArticle.articleTitle}}</p>
-                </button>
-              </form>
-            </view>
-            <view id="nextpage" class="mui-col-sm-6 mui-col-xs-6 nextpage">
-              <form data-type="gotoPage" data-bean="{{nextArticle}}" bindsubmit="formSubmit" report-submit>
-                <button class="form-btn" form-type="submit">
-                  <p style="color: darkgrey;">下一篇:</p>
-                  <p class="mui-ellipsis-2">{{nextArticle.articleTitle}}</p>
-                </button>
-              </form>
-            </view>
-          </view>
-        </view>
+    </view>
+        </swiper-item>
+      </block>
+    </swiper>
+    <!-- <view class='bottom-textview'>
+      <view class='flex-container'>
+        <view class='detail-type'>
+          <text style='color:yellow;'>#</text>{{article.typeName}}</view>
+        <view class='detail-index'>{{indexN+1}}/{{items.length}}</view>
       </view>
-    </scroll-view>
+      <view style="margin:15rpx 0">{{firstItem.text}}</view>
+    </view> -->
   </view>
 </view>
+ <!-- 底部评论框模板 -->
+<import src="../../template/bottombar.wxml" />
+<template is="bottombar" data="{{...bottombar}}" />
