--- a/pages/list/gifmain.wxml
+++ b/pages/list/gifmain.wxml
@@ -33,28 +33,25 @@
       <view id="list" class="mui-content">
         <view class="mui-table-view" wx:for="{{items}}" wx:key="item.articleId">
           <form data-type="openDetail" data-bean="{{item}}" bindsubmit="formSubmit" report-submit>
-            <button class="form-btn" form-type="submit">
+            <button class="form-btn" form-type="submit" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
               <view class="mui-table-view-cell">
                 <view class="mui-row">
-                  <view class="imgview mui-col-xs-2 mui-col-sm-2">
-                    <image class="mui-pull-left" lazy-load="true" src="{{item.articleImg}}"></image>
-                  </view>
-                  <view class="textview mui-col-xs-8 mui-col-sm-8">
-                    <view class="article-title-text article-title-height">
-                      <view class="mui-ellipsis-2">{{item.articleTitle}}</view>
-                    </view>
-                    <view class="article-title-text mui-row">
-                      <view class="time mui-col-xs-4 mui-col-sm-4">
-                        <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
-                      </view>
-                      <view class="author mui-col-xs-3 mui-col-sm-3">
+                  <view class="textview">
+                    <view class="typename">{{item.typeName}}</view>
+                    <view class="mui-ellipsis-3">{{item.articleTitle}}</view>
+                    <view class='item-bottom'>
+                      <view class="author">
                         <view class="iconfont icon-kanguo" style='font-size:22rpx;'>{{item.readTime}}</view>
                       </view>
-                      <view class="author mui-col-xs-2 mui-col-sm-2">
+                      <view class="nice">
                         <view class="iconfont icon-xiangqu" style='font-size:22rpx;'>{{item.niceNum}}</view>
                       </view>
                     </view>
+                    <view class="time">
+                      <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
+                    </view>
                   </view>
+                  <image class="img-right" lazy-load="true" mode="aspectFill" src="{{item.articleImg}}"></image>
                 </view>
               </view>
             </button>
