--- a/template/actionsheet.wxml
+++ b/template/actionsheet.wxml
@@ -1,10 +1,12 @@
 <!--默认action-sheet为隐藏，由button触发-->
 <template name="actionsheet">
-  <action-sheet hidden="{{actionSheetHidden}}" bindchange="listenerActionSheet">
+  <action-sheet hidden="{{actionsheetHidden}}" bindchange="listenerActionSheet">
+    <action-sheet-item>
+      <button open-type="share">转发给好友</button>
+    </action-sheet-item>
     <block>
-      <action-sheet-item open-type="share">分享给好友</action-sheet-item>
       <action-sheet-item>下载到本地</action-sheet-item>
     </block>
-      <action-sheet-cancel>取消</action-sheet-cancel>
+    <action-sheet-cancel>取消</action-sheet-cancel>
   </action-sheet>
 </template>
