--- a/pages/detail/dzdetail.wxml
+++ b/pages/detail/dzdetail.wxml
@@ -1,5 +1,5 @@
 <!--pages/detail/ztdetail.wxml-->
-<view class="page">
+<view class="page" hidden='{{loading}}'>
   <!-- 正文 -->
   <view class="page-section page-section-spacing">
     <swiper interval="{{interval}}" duration="{{duration}}" previous-margin="{{previousMargin}}px" next-margin="{{nextMargin}}px" bindchange="changePageNum" current='{{current}}'>
@@ -10,16 +10,11 @@
         <view class="bottom-title">{{article.articleContent}}</view>
       </swiper-item>
     </swiper>
-    <!-- <view class='bottom-textview'>
-      <view class='flex-container'>
-        <view class='detail-type'>
-          <text style='color:yellow;'>#</text>{{article.typeName}}</view>
-        <view class='detail-index'>{{indexN+1}}/{{items.length}}</view>
-      </view>
-      <view style="margin:15rpx 0">{{firstItem.text}}</view>
-    </view> -->
   </view>
+  <!-- 底部评论框模板 -->
+  <import src="../../template/bottombar.wxml" />
+  <template is="bottombar" data="{{...bottombar}}" />
+  <!-- 分享 -->
+  <import src="../../template/asnodownload.wxml" />
+  <template is="asnodownload" data="{{...actionsheet}}" />
 </view>
-<!-- 底部评论框模板 -->
-<import src="../../template/bottombar.wxml" />
-<template is="bottombar" data="{{...bottombar}}" />
