--- a/pages/detail/ztdetail.wxss
+++ b/pages/detail/ztdetail.wxss
@@ -3,12 +3,8 @@
 @import "../../utils/main.wxss";
 
 page {
-  background-color: white;
+  background-color: black;
   overflow: hidden;
-}
-
-.mui-content {
-  background-color: white;
 }
 
 .imgview {
@@ -30,7 +26,6 @@ page {
     transform: translate( -50%, -50%);
     height: 100%;
 }
-
 
 .page-section {
   width: 100%;
