--- a/pages/detail/dzdetail.wxss
+++ b/pages/detail/dzdetail.wxss
@@ -1,6 +1,7 @@
 /* pages/detail/dzdetail.wxss */
 @import "../../utils/iconfont.wxss";
 @import "../../utils/main.wxss";
+@import "../../template/login.wxss";
 
 page {
   background-color: black;
