--- a/pages/detail/videodetail.wxss
+++ b/pages/detail/videodetail.wxss
@@ -1,8 +1,7 @@
 /* pages/detail/videodetail.wxss */
 @import "../../utils/iconfont.wxss";
 @import "../../utils/main.wxss";
-@import "../../utils/iconfont.wxss";
-@import "../../utils/main.wxss";
+@import "../../template/login.wxss";
 
 page {
   background-color: black;
