--- a/pages/html/home.wxss
+++ b/pages/html/home.wxss
@@ -45,25 +45,26 @@
   height: 22vw;
   justify-content: center;
 }
-.lunboImage image{
+
+.lunboImage image {
   width: 100%;
   height: 100%;
   margin: auto;
   opacity: 0.6;
 }
 
-.banner-type{
+.banner-type {
   z-index: 1;
   position: absolute;
   font-weight: bold;
   font-size: 16px;
-  line-height: 20px; 
+  line-height: 20px;
   color: white;
   top: 10rpx;
   left: 15rpx;
 }
 
-.banner-title{
+.banner-title {
   z-index: 1;
   position: absolute;
   color: white;
@@ -72,4 +73,36 @@
   font-weight: 100;
   top: 30px;
   left: 15rpx;
+}
+
+.tomain {
+  padding-top: 20rpx;
+  padding-right: 30rpx;
+  font-size: 30rpx;
+  line-height: inherit;
+  text-align: right;
+  background: white;
+}
+
+.icon-more {
+  color: #45bcf9;
+}
+
+.cuigeng {
+  background: #f2f2f2;
+  border-radius: 20rpx;
+  padding: 6rpx 16rpx;
+  font-size: 24rpx;
+  float: right;
+  color: gray;
+  box-sizing: border-box;
+}
+
+.end-view {
+  background: #f2f2f2;
+  margin-top: 20rpx;
+  padding: 10rpx;
+  font-size: 24rpx;
+  color: gray;
+  text-align: center;
 }
