--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -20,12 +20,12 @@
       <view style="margin:15rpx 0">{{firstItem.text}}</view>
     </view>
   </view>
-  <view class='float-home' wx:if="{{homebtn}}">
+  <view class='float-home' wx:if="{{homebtn}}" bindtap='tap_home'>
     <text class='iconfont icon-shouye' style='font-size:14px;'> 点此去首页发现更多精彩</text>
   </view>
   <view class="bottom-bar">
     <input class='bottom-bar-input' placeholder="我来说两句" confirm-type="send" bindconfirm="postComment" value='{{sendInput}}'></input>
-    <view class='icon-vertical-ab' bindtap='nice'>
+    <view class='icon-vertical-ab'>
       <button class='{{niceClass}}' hover-class="none" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="tap_nice"></button>
       <view class='icon-text-box' style='left:63vw;'>
         <view class='icon-text'>{{article.niceNum}}</view>
@@ -115,4 +115,8 @@
   <!-- 分享 -->
   <import src="../../template/actionsheet.wxml" />
   <template is="actionsheet" data="{{...actionsheet}}" />
+  <!-- 登录 -->
+  <import src="../../template/login.wxml" />
+  <template is="login" data="{{...login}}" />
+  
 </view>
