--- a/pages/detail/videodetail.wxml
+++ b/pages/detail/videodetail.wxml
@@ -13,10 +13,16 @@
       </block>
     </swiper>
   </view>
+  <view class='float-home' wx:if="{{homebtn}}" bindtap='tap_home'>
+    <text class='iconfont icon-shouye' style='font-size:14px;'> 点此去首页发现更多精彩</text>
+  </view>
   <!-- 底部评论框模板 -->
   <import src="../../template/bottombar.wxml" />
   <template is="bottombar" data="{{...bottombar}}" />
   <!-- 分享 -->
   <import src="../../template/asnodownload.wxml" />
   <template is="asnodownload" data="{{...actionsheet}}" />
+  <!-- 登录 -->
+  <import src="../../template/login.wxml" />
+  <template is="login" data="{{...login}}" />
 </view>
