--- a/pages/html/home.wxml
+++ b/pages/html/home.wxml
@@ -26,7 +26,7 @@
       <text class='titlebar-right iconfont icon-sousuo' bindtap='tap_search'></text>
     </view>
     <!-- 正文 -->
-    <view class='tab-text' hidden='{{hidden}}' style='margin-top:85rpx;'>推荐</view>
+    <view class='tab-text' hidden='{{hidden}}' style='margin-top:85rpx;'>热门推荐</view>
     <scroll-view scroll-x="true" class='scroll-x-header'>
       <form class="scroll-x-view" wx:for="{{hotlist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit>
         <button open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo" class="form-banner" form-type="submit">
@@ -40,9 +40,13 @@
     </scroll-view>
     <view hidden='{{hidden}}' class='split-view'></view>
     <scroll-view>
-      <view class='tab-text' hidden='{{hidden}}' style='padding: 0 35rpx;'>最近更新</view>
+      <!-- GIF -->
+      <view class='tab-text' hidden='{{hidden}}'>
+        <text style='padding: 0 35rpx;'>搞笑GIF</text>
+        <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
+      </view>
       <view class="mui-table-view">
-        <form wx:for="{{uptodatelist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit wx:if="{{index == 0}}">
+        <form wx:for="{{giflist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit wx:if="{{index == 0}}">
           <button class="form-btn" form-type="submit" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
             <view class="mui-table-view-cell" style='padding-bottom:30rpx;'>
               <view class="typename" style='margin-top:8px;'>{{item.typeName}}</view>
@@ -63,8 +67,7 @@
           </button>
         </form>
       </view>
-
-      <view class="mui-table-view" wx:for="{{uptodatelist}}" wx:key="item.articleId">
+      <view class="mui-table-view" wx:for="{{giflist}}" wx:key="item.articleId">
         <form data-type="openDetail" data-bean="{{item}}" bindsubmit="formSubmit" report-submit>
           <button class="form-btn" form-type="submit" wx:if="{{index > 0}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
             <view class="mui-table-view-cell">
@@ -90,6 +93,111 @@
           </button>
         </form>
       </view>
+      <button class='tomain' bindtap='tap_tomain' data-type='gif'>查看更多
+        <text class='iconfont icon-gengduo icon-more'></text>
+      </button>
+      <!-- 段子 -->
+      <view hidden='{{hidden}}' class='split-view'></view>
+      <view class='tab-text' hidden='{{hidden}}'>
+        <text style='padding: 0 35rpx;'>看段子</text>
+        <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
+      </view>
+      <view class="mui-table-view" wx:for="{{dzlist}}" wx:key="item.articleId">
+        <form data-type="openDetail" data-bean="{{item}}" bindsubmit="formSubmit" report-submit>
+          <button class="form-btn" form-type="submit" wx:if="{{index < 2}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
+            <view class="mui-table-view-cell">
+              <view class="mui-row">
+                <view class="textview">
+                  <view class="typename">{{item.typeName}}</view>
+                  <view class="mui-ellipsis-3">{{item.articleTitle}}</view>
+                  <view class='item-bottom'>
+                    <view class="author">
+                      <view class="iconfont icon-kanguo" style='font-size:22rpx;'>{{item.readTime}}</view>
+                    </view>
+                    <view class="nice">
+                      <view class="iconfont icon-xiangqu" style='font-size:22rpx;'>{{item.niceNum}}</view>
+                    </view>
+                  </view>
+                  <view class="time">
+                    <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
+                  </view>
+                </view>
+                <image class="img-right" lazy-load="true" mode="aspectFill" src="{{item.articleImg}}"></image>
+              </view>
+            </view>
+          </button>
+        </form>
+      </view>
+      <button class='tomain' bindtap='tap_tomain' data-type='dz'>查看更多
+        <text class='iconfont icon-gengduo icon-more'></text>
+      </button>
+      <!-- 组图 -->
+      <view hidden='{{hidden}}' class='split-view'></view>
+      <view class='tab-text' hidden='{{hidden}}'>
+        <text style='padding: 0 35rpx;'>搞笑套图</text>
+        <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
+      </view>
+      <view class="mui-table-view" wx:for="{{ztlist}}" wx:key="item.articleId">
+        <form data-type="openDetail" data-bean="{{item}}" bindsubmit="formSubmit" report-submit>
+          <button class="form-btn" form-type="submit" wx:if="{{index < 2}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
+            <view class="mui-table-view-cell">
+              <view class="mui-row">
+                <view class="textview">
+                  <view class="typename">{{item.typeName}}</view>
+                  <view class="mui-ellipsis-3">{{item.articleTitle}}</view>
+                  <view class='item-bottom'>
+                    <view class="author">
+                      <view class="iconfont icon-kanguo" style='font-size:22rpx;'>{{item.readTime}}</view>
+                    </view>
+                    <view class="nice">
+                      <view class="iconfont icon-xiangqu" style='font-size:22rpx;'>{{item.niceNum}}</view>
+                    </view>
+                  </view>
+                  <view class="time">
+                    <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
+                  </view>
+                </view>
+                <image class="img-right" lazy-load="true" mode="aspectFill" src="{{item.articleImg}}"></image>
+              </view>
+            </view>
+          </button>
+        </form>
+      </view>
+      <button class='tomain' bindtap='tap_tomain' data-type='zt'>查看更多
+        <text class='iconfont icon-gengduo icon-more'></text>
+      </button>
+      <!-- 视频 -->
+      <view hidden='{{hidden}}' class='split-view'></view>
+      <view class='tab-text' hidden='{{hidden}}'>
+        <text style='padding: 0 35rpx;'>小视频</text>
+        <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
+      </view>
+      <view class="mui-table-view">
+        <form wx:for="{{videolist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit wx:if="{{index == 0}}">
+          <button class="form-btn" form-type="submit" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
+            <view class="mui-table-view-cell" style='padding-bottom:30rpx;'>
+              <view class="typename" style='margin-top:8px;'>{{item.typeName}}</view>
+              <view class="mui-ellipsis" style="padding: 5px 0px;">{{item.articleTitle}}</view>
+              <image lazy-load="true" mode="aspectFill" class="img-header" src="{{item.articleImg}}"></image>
+              <view class='item-bottom'>
+                <view class="author" style="bottom:10rpx;">
+                  <view class="iconfont icon-kanguo" style='font-size:22rpx;'>{{item.readTime}}</view>
+                </view>
+                <view class="nice" style="bottom:10rpx;">
+                  <view class="iconfont icon-xiangqu" style='font-size:22rpx;'>{{item.niceNum}}</view>
+                </view>
+              </view>
+              <view class="time" style="bottom:10rpx;right:20rpx;">
+                <view class="iconfont icon-shijian" style='font-size:22rpx;'>{{item.publishTime}}</view>
+              </view>
+            </view>
+          </button>
+        </form>
+      </view>
+      <button class='tomain' bindtap='tap_tomain' data-type='video'>查看更多
+        <text class='iconfont icon-gengduo icon-more'></text>
+      </button>
+      <view hidden='{{hidden}}' class='end-view'>到底啦~</view>
     </scroll-view>
   </view>
 </view>
