--- a/template/bottombar.wxml
+++ b/template/bottombar.wxml
@@ -1,20 +1,20 @@
 <template name="bottombar">
   <view class="bottom-bar">
     <input class='bottom-bar-input' placeholder="我来说两句" confirm-type="send" bindconfirm="postComment" value='{{sendInput}}'></input>
-    <view class='icon-vertical-ab' bindtap='nice'>
-      <button class='{{niceClass}}' hover-class="none"></button>
+    <view class='icon-vertical-ab'>
+      <button class='{{niceClass}}' hover-class="none" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="tap_nice"></button>
       <view class='icon-text-box' style='left:63vw;'>
         <view class='icon-text'>{{article.niceNum}}</view>
       </view>
     </view>
-    <view class='icon-vertical' bindtap='tap_comment' style='margin-left:14%'>
-      <text class='iconfont icon-interactive_fill myicon'></text>
+    <view class='icon-vertical' style='margin-left:14%'>
+      <button class='iconfont icon-interactive_fill myicon' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="tap_comment"></button>
       <view class='icon-text-box'>
         <view class='icon-text'>{{article.cm_count}}</view>
       </view>
     </view>
-    <view class='icon-vertical' bindtap='tap_share'>
-      <text class='iconfont icon-share_fill myicon'></text>
+    <view class='icon-vertical'>
+      <button class='iconfont icon-share_fill myicon' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="tap_share"></button>
       <view class='icon-text-box'>
         <view class='icon-text'>0</view>
       </view>
