--- a/pages/html/home.wxml
+++ b/pages/html/home.wxml
@@ -41,13 +41,13 @@
     <view hidden='{{hidden}}' class='split-view'></view>
     <scroll-view>
       <!-- GIF -->
-      <view class='tab-text' hidden='{{hidden}}'>
-        <text style='padding: 0 35rpx;'>搞笑GIF</text>
+      <view class='type-text' hidden='{{hidden}}'>
+        <text>搞笑GIF</text>
         <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
       </view>
       <view class="mui-table-view">
         <form wx:for="{{giflist}}" wx:key="item.articleId" data-bean="{{item}}" data-type="openDetail" bindsubmit="formSubmit" report-submit wx:if="{{index == 0}}">
-          <button class="form-btn" form-type="submit" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
+          <button class="form-btn-first" form-type="submit" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
             <view class="mui-table-view-cell" style='padding-bottom:30rpx;'>
               <view class="typename" style='margin-top:8px;'>{{item.typeName}}</view>
               <view class="mui-ellipsis" style="padding: 5px 0px;">{{item.articleTitle}}</view>
@@ -98,8 +98,8 @@
       </button>
       <!-- 段子 -->
       <view hidden='{{hidden}}' class='split-view'></view>
-      <view class='tab-text' hidden='{{hidden}}'>
-        <text style='padding: 0 35rpx;'>看段子</text>
+      <view class='type-text' hidden='{{hidden}}'>
+        <text>看段子</text>
         <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
       </view>
       <view class="mui-table-view" wx:for="{{dzlist}}" wx:key="item.articleId">
@@ -133,8 +133,8 @@
       </button>
       <!-- 组图 -->
       <view hidden='{{hidden}}' class='split-view'></view>
-      <view class='tab-text' hidden='{{hidden}}'>
-        <text style='padding: 0 35rpx;'>搞笑套图</text>
+      <view class='type-text' hidden='{{hidden}}'>
+        <text>搞笑套图</text>
         <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
       </view>
       <view class="mui-table-view" wx:for="{{ztlist}}" wx:key="item.articleId">
@@ -168,8 +168,8 @@
       </button>
       <!-- 视频 -->
       <view hidden='{{hidden}}' class='split-view'></view>
-      <view class='tab-text' hidden='{{hidden}}'>
-        <text style='padding: 0 35rpx;'>小视频</text>
+      <view class='type-text' hidden='{{hidden}}'>
+        <text>小视频</text>
         <text class='iconfont icon-zenyaowan cuigeng' catchtap='tap_update'> 催更</text>
       </view>
       <view class="mui-table-view">
