--- a/utils/main.wxss
+++ b/utils/main.wxss
@@ -33,7 +33,7 @@ button::after {
   content: '';
   -webkit-transform: scaleY(0.5);
   transform: scaleY(0.5);
-  background-color: #c8c7cc;
+  background-color: #e9e9e9;
 }
 
 .form-btn-first {
