--- a/pages/detail/dzdetail.wxss
+++ b/pages/detail/dzdetail.wxss
@@ -2,7 +2,7 @@
 @import "../../utils/iconfont.wxss";
 @import "../../utils/main.wxss";
 @import "../../template/login.wxss";
-
+@import "../../template/shareimg.wxss";
 page {
   background-color: white;
   overflow: hidden;
