--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -113,11 +113,14 @@
     </view>
   </view>
 
-  <!-- 分享 -->
+  <!-- 转发 -->
   <import src="../../template/actionsheet.wxml" />
   <template is="actionsheet" data="{{...actionsheet}}" />
   <!-- 登录 -->
   <import src="../../template/login.wxml" />
   <template is="login" data="{{...login}}" />
+  <!-- 分享图片 -->
+  <import src="../../template/shareimg.wxml" />
+  <template is="shareImg" data="{{...shareImg}}" />
   
 </view>
