--- a/pages/detail/gifdetail.wxss
+++ b/pages/detail/gifdetail.wxss
@@ -2,6 +2,7 @@
 @import "../../utils/iconfont.wxss";
 @import "../../utils/main.wxss";
 @import "../../template/login.wxss";
+@import "../../template/shareimg.wxss";
 
 page {
   background-color: black;
