--- a/template/actionsheet.wxml
+++ b/template/actionsheet.wxml
@@ -1,5 +1,6 @@
 <template name="actionsheet">
   <view class="actionsheet_box {{actionSheetHidden? 'as-state-1' : 'as-state-2'}}">
+    <button bindtap="shareImg">分享到朋友圈</button>
     <button open-type="share">转发给好友</button>
     <button bindtap='saveImg'>下载到本地</button>
     <button bindtap="ascancel">取消</button>
